# bwinf41

./: .gitignore  Aufgabe1.odt  Aufgabe3.odt  Aufgabe5.odt  Cargo.toml  clippy.toml  run_all.sh
.devcontainer/: devcontainer.json
bwinf41/: Cargo.toml  aufgaben_helfer.rs
bwinf41-1/: Cargo.toml  aufgaben_helfer.rs
bwinf41-1/a1/Quelltext/: bin.rs
bwinf41-1/a3/Quelltext/: bin.rs
bwinf41-1/a5/Quelltext/: bin.rs
bwinf41-2/: Cargo.toml
bwinf41-2/a1/Quelltext/: bin.rs
bwinf41-2/a3/Quelltext/: bin.rs  kernel.cu
bwinf41-2/a3/Quelltext/aufgaben/: pancake0.txt
bwinf41/a1/Quelltext/: bin.rs
bwinf41/a3/Quelltext/: bin.rs
bwinf41/a5/Quelltext/: bin.rs
documentation-1/: Aufgabe1.odt  Aufgabe3.odt  Aufgabe5.odt
src/: a1.rs  a3.rs  a5.rs  aufgaben_helfer.rs  main.rs
